frontend/public/app.css
/* ... */
.mg-x-axis text,
.mg-y-axis text,
.mg-histogram .axis text {
    fill: black;
    font-size: 0.9rem;
    opacity: 0.6;
}

.mg-x-axis .label,
.mg-y-axis .label,
.mg-axis .label {
    font-size: 0.8rem;
    text-transform: uppercase;
    font-weight: 400;
}

.mg-x-axis-small text,
.mg-y-axis-small text,
.mg-active-datapoint-small {
    font-size: 0.6rem;
}

.mg-x-axis-small .label,
.mg-y-axis-small .label {
    font-size: 0.65rem;
}

.mg-european-hours {
}

.mg-year-marker text {
    fill: black;
    font-size: 0.7rem;
    opacity: 0.6;
}

.mg-year-marker line {
    opacity: 1;
    shape-rendering: auto;
    stroke: #b3b2b2;
    stroke-width: 1px;
}

.mg-year-marker-small text {
    font-size: 0.6rem;
}

body {
  background: #eaeaea;
  padding-bottom: 216px;
}
header {
  width: 100%;
  min-height: 50px;
  padding: 20px;
  margin-bottom: 20px;
  background: #fafafa;
}
header .search {
  width: 100%;
  margin-top: 25px;
}
.header-nav {
  margin-top: 25px;
  display: block;
}
.header-nav-item {
  padding: 10px 10px;
  display: inline-block;
  float: right;
  text-decoration: none;
  color: #777;
}
#logo {
  display: inline-block;
  margin-top: 0px;
  max-width: 250px;
}
.content {
  margin: auto;
  width: 95%;
  max-width: 1080px;
}
.tabs li.active a {
  color: #000;
  background: #eaeaea;
  border-bottom: 1px solid #eaeaea;
}
section#landing h1 {
  font-size: 25px;
}
section {
  width: 100%;
  padding: 36px;
  float: right;
  margin: 0 0 24px 0;
  background: #fafafa;
  box-shadow: 5px 5px 20px 2px rgba(0,0,0,0.03);
}
section h2 {
  font-size: 21px;
  line-height: 32px;
  color: #7d7d7d;
  margin-bottom: 50px;
}
section small {
  display: block;
  width: 100%;
  margin-top: 30px;
  padding-right: 20px;
  text-align: right;
  color: #aaa;
}
section small a {
  color: #aaf;
  text-decoration: none;
}
section.unmaterialized {
  box-shadow: 0 0 0 0;
  background: #f0f0f0;
  padding: 24px 24px 48px 24px;
  border-right: 1px solid #dedede;
  border-bottom: 1px solid #dedede;
}
#controls {
  padding: 28px 36px 0px 36px;
  background: #f0f0f0;
  border-right: 1px solid #dedede;
  border-bottom: 1px solid #dedede;
  margin-bottom: 20px;
}
.fixed {
  position: relative;
}
section.status {
  box-shadow: 0 0 0 0;
  background: #f0f0f0;
  padding: 24px 24px 48px 24px;
}
@media (min-width: 1230px) {
  #cards {
    width: 100%;
    padding-bottom: 100px;
    position: relative;
    z-index: 9;
  }
  section {
    z-index: 10;
  }
  #landing {
    width: 100%;
  }
  .fixed-container {
    z-index: 0;
    position: absolute;
    top: 245px;
    left: calc(50% - (540px));
  }
  .fixed {
    position: fixed !important;
    top: 25px;
  }
}
.warn {
  color: #f00;
}
.warn:before {
  content: ' ⚠ ';
}
.below-chart {
  position: relative;
  z-index: 2;
  width: 100%;
  margin: -10px 0 30px 0;
}
cite.metric {
  display: block;
  width: 100%;
  height: 0;
  margin-left: 52px;
  float: left;
  text-align: left;
  font-size: 12px;
  color: #ccc;
  font-style: normal;
}
cite.metric a {
  color: #aaa;
  text-decoration: underline;
}
.graph-download {
  background: 0;
  color: #ccc;
  font-size: 0.7em;
  height: 5px !important;
  line-height: 30px;
  float: right;
  margin: -7px 7px 0 0 !important;
  padding: 3px !important;
}
.graph-download:hover {
  background: #eee;
  color: #000;
}
.linechart {
  position: relative;
  z-index: 1;
  height: 300px;
  margin-bottom: 60px;
}
.marks {
  padding: 10px 0px 0px 0px !important;
}
.role-title > text {
  font-size: 20px !important;
  font-weight: normal !important;
}
.bubblechart {
  width: 100%;
}
.bubblechart * {
  overflow: visible !important;
}
.stackedbarchart * {
  overflow: visible !important;
  width: 100%;
  margin-bottom: 30px;
}
.bubblechart svg {
  width: 100%;
}
.mg-line-legend {
  display: none;
}
.legend {
  position: relative;
  margin: 0;
  padding: 0;
  height: 0;
  top: 31px;
  left: 55px;
  font-size: 14px;
  font-weight: bold;
  opacity: 0.8;
}
.mg-baselines {
  opacity: 0.5;
}
.loader {
  width: 100%;
  text-align: center;
  line-height: 10;
  animation: outro 1s, loader 1.5s infinite;
}
.intro {
  animation: intro 2s;
}
@media print {
  body {
    zoom: 75%;
  }
  section {
    min-width: 800px;
    min-height: 10.5in;
    page-break-after: always;
  }
  section.unmaterialized {
    display: none;
  }
}
.hidden,
.hidden > *,
.hidden > small {
  display: none !important;
}
.invis,
.invis > *,
.invis > small {
  z-index: -1;
  opacity: 0 !important;
}
@-moz-keyframes outro {
  0% {
    opacity: 1;
    filter: grayscale(0%);
  }
  100% {
    opacity: 0.2;
    filter: grayscale(100%);
  }
}
@-webkit-keyframes outro {
  0% {
    opacity: 1;
    filter: grayscale(0%);
  }
  100% {
    opacity: 0.2;
    filter: grayscale(100%);
  }
}
@-o-keyframes outro {
  0% {
    opacity: 1;
    filter: grayscale(0%);
  }
  100% {
    opacity: 0.2;
    filter: grayscale(100%);
  }
}
@keyframes outro {
  0% {
    opacity: 1;
    filter: grayscale(0%);
  }
  100% {
    opacity: 0.2;
    filter: grayscale(100%);
  }
}
@-moz-keyframes loader {
  0% {
    opacity: 0.2;
    filter: grayscale(100%);
  }
  50% {
    opacity: 0.4;
    filter: grayscale(50%);
  }
  100% {
    opacity: 0.2;
    filter: grayscale(100%);
  }
}
@-webkit-keyframes loader {
  0% {
    opacity: 0.2;
    filter: grayscale(100%);
  }
  50% {
    opacity: 0.4;
    filter: grayscale(50%);
  }
  100% {
    opacity: 0.2;
    filter: grayscale(100%);
  }
}
@-o-keyframes loader {
  0% {
    opacity: 0.2;
    filter: grayscale(100%);
  }
  50% {
    opacity: 0.4;
    filter: grayscale(50%);
  }
  100% {
    opacity: 0.2;
    filter: grayscale(100%);
  }
}
@keyframes loader {
  0% {
    opacity: 0.2;
    filter: grayscale(100%);
  }
  50% {
    opacity: 0.4;
    filter: grayscale(50%);
  }
  100% {
    opacity: 0.2;
    filter: grayscale(100%);
  }
}
@-moz-keyframes intro {
  0% {
    opacity: 0.2;
    filter: grayscale(100%);
  }
  100% {
    opacity: 1;
    filter: grayscale(0%);
  }
}
/* ... */

